<resources>
    <string name="app_name">Yilong Ma</string>

    <string name="categories">Conversation Categories</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="all">all</string>
    <string name="send">Send</string>
    <string name="add_new_category">Add new Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="update_category">Update Category</string>
    <string name="add_new_conversation">Add new Conversation</string>
    <string name="update_conversation">Update Conversation</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="conversations">Conversations</string>
    <string name="yilong_ma">Yilong Ma</string>
    <string name="category_colon">Category:</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="write_message">Write a message</string>
    <string name="write_messagae">Write a message</string>
    <string name="please_wait">Please Wait...</string>
    <string name="no_conversation">No conversation</string>
    <string name="search">Search</string>
    <string name="ok">"OK"</string>
    <string name="go_back">"Go Back"</string>
    <string name="send_chat">"Send Chat"</string>
    <string name="close">"Close"</string>

    <!-- Error message -->
    <string name="error_socket_time_out">Socket timeout error</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_unauthenticated">Unauthenticated error</string>
    <string name="error_exception">Exception error</string>
    <string name="error_not_found">Not found error</string>

    <!-- Server error message -->
    <string name="msg_code_category_already_exists">Category already exists</string>

    <!-- Dialog message -->
    <string name="delete_item_message">Do you want to delete this item?</string>
</resources>