...
    val clickedItem = _clickedItem.asStateFlow()
    private val _twoActionDialogState = MutableStateFlow(DialogState<TwoActionDialogType>())
    val twoActionDialogState = _twoActionDialogState.asStateFlow()
    private val _oneTFDialogState = MutableStateFlow(DialogState<OneTFDialogType>())
    val oneTFDialogState = _oneTFDialogState.asStateFlow()
    private val _categoryName = MutableStateFlow("")
    val categoryName = _categoryName.asStateFlow()
    private val _listState = MutableStateFlow(LazyListState())
    val listState = _listState

    override suspend fun repoCall(): Flow<DataResource<GetConversationRes>> {
        return converRepo.getAll(_name.value)
    }
...
